--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,14 +14,6 @@
 * l (1280px) Laptop
 * xl (1440px) Desktop
 
-- Specific Desktop Size:
-* 1280×720
-* 1366×768
-* 1440×900
-* 1536×864
-* 1600×900
-* 1920×1080
-
 - Note: For naming, I tried follow BEM. (.block_element-modifier)
 - Reference:
 * https://getbem.com/
@@ -32,59 +24,1148 @@
 ------------------------------------- */
 
 /* Mobile */
-@media (min-width: 360px) {
-  .h0 {
+@media (min-width: 0) {
+  /* specific */
+  .navbar__logo {
+    width: 8rem;
+  }
+
+  .article__txt p,
+  .article__txt li {
+    font-size: var(--body1-s);
+    line-height: 1.2;
+    margin-bottom: var(--size-s);
+  }
+
+  .article__txt h1,
+  .article__txt h2,
+  .article__txt h3,
+  .article__txt h4 {
+    font-weight: bold;
+    margin-bottom: var(--size-s);
+  }
+
+  #related .section__content {
+    flex-direction: column;
+  }
+
+  .related__item {
+    width: 100%;
+  }
+
+  .navbar__wrapper {
+    height: 3.2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    padding-bottom: 0;
+    transition: background-color 0.15s ease, box-shadow 0.15s ease;
+  }
+
+  .navbar__menu.gap--l {
+    gap: 1rem;
+  }
+
+  .navbar__personal.gap--s {
+    gap: 0;
+  }
+
+  .btn__saved.btn--circle-l,
+  .btn__access.btn--circle-l {
+    width: 1.6rem;
+  }
+
+  .saved__content {
+    flex-direction: column;
+  }
+
+  #saved {
+    width: 100%;
+  }
+
+  .article__aside-bg {
+    display: none;
+  }
+
+  .article__content {
+    width: 36rem;
+  }
+
+  .author {
+    flex-direction: column;
+  }
+
+  #author__content {
+    width: 100%;
+  }
+
+  .authors {
+    flex-direction: column;
+  }
+
+  #authors__content {
+    width: 100%;
+  }
+
+  .footer__sitemap {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .footer__logo {
+    grid-column: 1/-1;
+    padding-bottom: var(--size-l);
+  }
+
+  .footer__information,
+  .footer__menu,
+  .footer__topics {
+    padding-bottom: var(--size-l);
+  }
+
+  .insights__content {
+    flex-direction: column;
+  }
+
+  .side {
+    width: 100%;
+    margin-top: 0;
+    border: none;
+  }
+
+  #insights {
+    width: 100%;
+  }
+
+  #highlights {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  #cover {
+    height: 65rem;
+  }
+
+  .video__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .video__item {
+    width: 100%;
+    height: 10rem;
+  }
+
+  #explore {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #inspirations,
+  #latest,
+  .explore__aside {
+    width: 100%;
+  }
+
+  .video__content {
+    padding: 0 var(--size-l) 0 var(--size-l);
+  }
+
+  .video__bg {
+    min-height: 35rem;
+  }
+
+  .savedForLater__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .savedForLater__item {
+    width: 100%;
+    min-height: 35rem;
+  }
+
+  #trending__layout {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+  #trending {
+    grid-column: 1 / -1;
+    grid-row: 1/1;
+  }
+
+  #trending .section__content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .trending__main {
+    grid-column: 1/-1;
+    grid-row: 1/1;
+    width: 100%;
+  }
+
+  .trending__list {
+    grid-column: 1/-1;
+    grid-row: 2/2;
+    width: 100%;
+    border: none;
+    padding-top: var(--size-l);
+  }
+
+  #connected {
+    grid-column: 1 / -1;
+    grid-row: 2 / 2;
+  }
+  #newsletter {
+    grid-column: 1 / -1;
+    grid-row: 3 / 3;
+  }
+
+  .awards__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .awards__item {
+    min-height: 45rem;
+  }
+
+  .topics__count-box {
+    width: 2.2rem;
+    height: 2.2rem;
+  }
+
+  .topic {
+    padding: 0.15rem 1.4rem;
+  }
+
+  .editorsPick__main {
+    border-bottom: solid 0.1rem var(--color-secondary);
+    padding-bottom: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+
+  .navbar__wrapper {
+    grid-template-columns: 2fr 6fr 1fr;
+  }
+
+  /* basic */
+  h1,
+  .ts--h1 {
+    letter-spacing: var(--h1-spacing-xl);
     font-size: var(--h0-xs);
     line-height: 1.225;
   }
 
-  h1 {
+  h2,
+  .ts--h2 {
+    letter-spacing: var(--h2-spacing-xl);
     font-size: var(--h1-xs);
     line-height: 1.24;
   }
 
-  h2 {
+  h3,
+  .ts--h3 {
+    letter-spacing: var(--h3-spacing-xl);
     font-size: var(--h2-xs);
     line-height: 1.263;
   }
 
-  h3 {
+  h4,
+  .ts--h4 {
+    letter-spacing: var(--h4-spacing-xl);
     font-size: var(--h3-xs);
     line-height: 1.294;
   }
 
+  span,
   a,
   p,
-  body {
-    font-size: var(--body-m-xs);
+  body,
+  q,
+  input,
+  .ts--body {
+    font-size: var(--body-xs-xs);
     line-height: 1.357;
+    letter-spacing: var(--body1-spacing-xl);
   }
 
+  label,
   .ts--body-s {
+    letter-spacing: var(--body2-spacing-m);
     font-size: var(--ts--body-s-xs);
     line-height: 1.333;
   }
 
-  .body-xs {
-    font-size: var(--body-xs-xs);
+  button,
+  .ts--btn {
+    font-size: var(--button-s);
+    letter-spacing: var(--button-spacing-s);
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .ts--caption {
+    font-size: var(--caption-s);
     line-height: 1.18;
+    letter-spacing: var(--caption-spacing-xl);
+  }
+
+  /* Column gap -------------- */
+  /* Row gap */
+  .gap--xl {
+    gap: 3.2rem;
+  }
+
+  .gap--l {
+    gap: 2.4rem;
+  }
+
+  .gap--m {
+    gap: 0.8rem;
+  }
+
+  .gap--s {
+    gap: 0.4rem;
+  }
+
+  /* Section Spacing --------------- */
+  .container--m {
+    padding: 3.2rem 1.6rem;
+  }
+
+  .container--s {
+    padding: 1.6rem 0.8rem;
+  }
+
+  /* Section Aside Spacing --------- */
+  .aside__box {
+    border: solid 0.1rem var(--color-secondary);
+    border-radius: var(--rad-img);
+  }
+
+  /* Navbar Spacing */
+  nav {
+    padding: 0.4rem 3.2rem;
   }
 }
 
 /* Tablet Portrait */
 @media (min-width: 600px) {
+  /* specific */
+  .article__txt p,
+  .article__txt li {
+    font-size: var(--body1-s);
+    line-height: 1.2;
+    margin-bottom: var(--size-s);
+  }
+
+  .article__txt h1,
+  .article__txt h2,
+  .article__txt h3,
+  .article__txt h4 {
+    font-weight: bold;
+    margin-bottom: var(--size-s);
+  }
+
+  #related .section__content {
+    flex-direction: column;
+  }
+
+  .related__item {
+    width: 100%;
+  }
+
+  .navbar__menu.gap--l {
+    gap: inherit;
+  }
+
+  .navbar__personal.gap--s {
+    gap: inherit;
+  }
+
+  .btn__saved.btn--circle-l,
+  .btn__access.btn--circle-l {
+    width: inherit;
+  }
+
+  .navbar__wrapper {
+    position: fixed;
+    z-index: 20;
+    height: 6.4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    align-items: flex-end;
+    display: grid;
+    grid-template-columns: 2fr 9fr 1fr;
+    padding-bottom: 1.6rem;
+    transition: background-color 0.15s ease, box-shadow 0.15s ease;
+  }
+
+  .saved__content {
+    flex-direction: column;
+  }
+
+  #saved {
+    width: 100%;
+  }
+
+  .article__aside-bg {
+    display: none;
+  }
+
+  .article__content {
+    width: 60rem;
+  }
+
+  .author {
+    flex-direction: column;
+  }
+
+  #author__content {
+    width: 100%;
+  }
+
+  .authors {
+    flex-direction: column;
+  }
+
+  #authors__content {
+    width: 100%;
+  }
+
+  .footer__sitemap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+  }
+
+  .footer__logo {
+    grid-column: 1/-1;
+    padding-bottom: var(--size-l);
+  }
+
+  .footer__information,
+  .footer__menu {
+    padding-bottom: var(--size-l);
+  }
+
+  .insights__content {
+    flex-direction: column;
+  }
+
+  .side {
+    width: 100%;
+    margin-top: 0;
+    border: none;
+  }
+
+  #insights {
+    width: 100%;
+  }
+
+  #highlights {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  #cover {
+    height: 65rem;
+  }
+
+  .video__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .video__item {
+    width: 100%;
+    height: 10rem;
+  }
+
+  #explore {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #inspirations,
+  #latest,
+  .explore__aside {
+    width: 100%;
+  }
+
+  .video__content {
+    padding: 0 var(--size-l) 0 var(--size-l);
+  }
+
+  .video__bg {
+    min-height: 35rem;
+  }
+
+  .savedForLater__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .savedForLater__item {
+    width: 100%;
+    min-height: 35rem;
+  }
+
+  #trending__layout {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+  #trending {
+    grid-column: 1 / -1;
+    grid-row: 1/1;
+  }
+
+  #trending .section__content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .trending__main {
+    grid-column: 1/-1;
+    grid-row: 1/1;
+    width: 100%;
+  }
+
+  .trending__list {
+    grid-column: 1/-1;
+    grid-row: 2/2;
+    width: 100%;
+    border: none;
+    padding-top: var(--size-l);
+  }
+
+  #connected {
+    grid-column: 1 / -1;
+    grid-row: 2 / 2;
+  }
+  #newsletter {
+    grid-column: 1 / -1;
+    grid-row: 3 / 3;
+  }
+
+  .awards__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  .awards__item {
+    min-height: 45rem;
+  }
+
+  .topics__count-box {
+    width: 2.2rem;
+    height: 2.2rem;
+  }
+
+  .topic {
+    padding: 0.15rem 1.4rem;
+  }
+
+  .editorsPick__main {
+    border-bottom: solid 0.1rem var(--color-secondary);
+    padding-bottom: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+
+  .navbar__wrapper {
+    grid-template-columns: 2fr 6fr 1fr;
+  }
+
+  .navbar__logo {
+    width: 11.5rem;
+  }
+
+  /* basic */
+  h1,
+  .ts--h1 {
+    font-size: var(--h1-s);
+    letter-spacing: var(--h1-spacing-xl);
+    line-height: 1.2;
+  }
+
+  h2,
+  .ts--h2 {
+    font-size: var(--h2-s);
+    letter-spacing: var(--h2-spacing-xl);
+    line-height: 1.25;
+  }
+
+  h3,
+  .ts--h3 {
+    font-size: var(--h3-s);
+    letter-spacing: var(--h3-spacing-xl);
+    line-height: 1.25;
+  }
+
+  h4,
+  .ts--h4 {
+    font-size: var(--h4-s);
+    letter-spacing: var(--h4-spacing-xl);
+    line-height: 1.27;
+  }
+
+  span,
+  a,
+  p,
+  body,
+  q,
+  input,
+  .ts--body {
+    font-size: var(--body1-s);
+    letter-spacing: var(--body1-spacing-xl);
+    line-height: 1.263;
+  }
+
+  label,
+  .ts--body-s {
+    font-size: var(--body2-s);
+    letter-spacing: var(--body2-spacing-m);
+    line-height: 1.33;
+  }
+
+  button,
+  .ts--btn {
+    font-size: var(--button-s);
+    letter-spacing: var(--button-spacing-s);
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .ts--caption {
+    font-size: var(--caption-s);
+    letter-spacing: var(--caption-spacing-xl);
+  }
+
+  /* Column gap -------------- */
+  /* Row gap */
+  .gap--xl {
+    gap: 3.2rem;
+  }
+
+  .gap--l {
+    gap: 1.6rem;
+  }
+
+  .gap--m {
+    gap: 0.8rem;
+  }
+
+  .gap--s {
+    gap: 0.4rem;
+  }
+
+  /* Section Spacing --------------- */
+  .container--m {
+    padding: 3.2rem 1.6rem;
+  }
+
+  .container--s {
+    padding: 1.6rem 0.8rem;
+  }
+
+  /* Section Aside Spacing --------- */
+  .aside__box {
+    border: solid 0.1rem var(--color-secondary);
+    border-radius: var(--rad-img);
+  }
+
+  /* Navbar Spacing */
+  nav {
+    padding: 0.1rem 1.6rem;
+  }
 }
 
 /* Tablet Landscape */
 @media (min-width: 950px) {
+  /* specific */
+  .article__txt p,
+  .article__txt li {
+    font-size: var(--body1-m);
+    line-height: 1.24;
+    margin-bottom: var(--size-s);
+  }
+
+  .article__txt h1,
+  .article__txt h2,
+  .article__txt h3,
+  .article__txt h4 {
+    font-weight: bold;
+    margin-bottom: var(--size-s);
+  }
+
+  #related .section__content {
+    flex-direction: row;
+  }
+
+  .related__item {
+    width: 25%;
+  }
+
+  .saved__content {
+    flex-direction: row;
+  }
+
+  #saved {
+    width: 66.66%;
+  }
+
+  .article__aside-bg {
+    display: unset;
+  }
+
+  .article__content {
+    width: 72rem;
+  }
+
+  .author {
+    flex-direction: row;
+  }
+
+  #author__content {
+    width: 66.666%;
+  }
+
+  .authors {
+    flex-direction: row;
+  }
+
+  #authors__content {
+    width: 66.6666%;
+  }
+
+  .footer__sitemap {
+    color: var(--color-gray);
+    display: grid;
+    grid-template-columns: 3fr 3fr 1.5fr 1.5fr 3fr;
+    grid-template-rows: auto auto;
+    gap: 1.6rem;
+
+    border-top: solid 1px var(--color-secondary-light);
+    padding-top: 6.4rem;
+  }
+
+  .footer__logo {
+    grid-column: 1 / 2;
+  }
+
+  .footer__information,
+  .footer__menu,
+  .footer__logo {
+    padding-bottom: 0;
+  }
+
+  .insights__content {
+    flex-direction: row;
+  }
+
+  .side {
+    padding-top: 0;
+    margin-top: 11.2rem;
+    width: 33.333%;
+    border-left: solid 1px var(--color-secondary-light);
+  }
+
+  #insights {
+    width: 66.666%;
+  }
+
+  #highlights {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+
+  #cover {
+    height: unset;
+  }
+
+  .video__list {
+    display: grid;
+  }
+
+  .video__item {
+    width: unset;
+    height: unset;
+  }
+
+  .video__content {
+    padding: 0 var(--size-l) 0 var(--size-l);
+  }
+
+  .video__bg {
+    min-height: 85rem;
+  }
+
+  .savedForLater__list {
+    display: flex;
+  }
+  .savedForLater__item {
+    width: 25%;
+    min-height: 55rem;
+  }
+
+  .awards__list {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    gap: 1.6rem;
+    min-height: 60rem;
+  }
+
+  .awards__item {
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    border-radius: var(--rad-img);
+  }
+
+  .topics__count-box {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+
+  .topic {
+    padding: 0.4rem 1.6rem;
+  }
+
+  .editorsPick__main {
+    border-bottom: solid 0.1rem var(--color-secondary);
+    padding-bottom: 3.2rem;
+    margin-bottom: 3.2rem;
+  }
+
+  .navbar__logo {
+    width: 18rem;
+  }
+
+  .article__content {
+    width: 46rem;
+    padding: var(--size-xl) var(--size-m);
+  }
+
+  .article__aside {
+    max-width: 26rem;
+  }
+
+  .video__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .video__item {
+    width: 100%;
+    border: none;
+    border-top: solid 1px var(--color-secondary-light);
+    padding-top: var(--size-m);
+  }
+
+  #explore {
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  #inspirations {
+    width: 100%;
+    height: fit-content;
+  }
+
+  #latest {
+    width: 100%;
+    grid-row: 1 / -1;
+    height: fit-content;
+  }
+
+  .explore__aside {
+    width: 100%;
+  }
+
+  .savedForLater__item {
+    min-height: 45rem;
+  }
+
+  .navbar__wrapper {
+    grid-template-columns: 2fr 6fr 1fr;
+  }
+
+  .awards__name {
+    letter-spacing: 1px;
+  }
+
+  #trending {
+    grid-column: 1 / -1;
+    grid-row: 1 / 1;
+  }
+
+  #trending__layout {
+    background-color: var(--color-primary-lightest);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  .trending__main {
+    width: 49%;
+  }
+
+  .trending__list {
+    width: 51%;
+    border-right: none;
+    border-left: 1px solid var(--color-secondary);
+  }
+
+  #connected {
+    grid-column: 1 / 3;
+    grid-row: 2 / -1;
+  }
+
+  #newsletter {
+    grid-column: 3 / -1;
+    grid-row: 2 / -1;
+  }
+
+  #trending .section__content {
+    display: flex;
+  }
+
+  /* basic */
+  h1,
+  .ts--h1 {
+    font-size: var(--h1-m);
+    letter-spacing: var(--h1-spacing-xl);
+    line-height: 1.2;
+  }
+
+  h2,
+  .ts--h2 {
+    font-size: var(--h2-m);
+    letter-spacing: var(--h2-spacing-xl);
+    line-height: 1.25;
+  }
+
+  h3,
+  .ts--h3 {
+    font-size: var(--h3-m);
+    letter-spacing: var(--h3-spacing-xl);
+    line-height: 1.25;
+  }
+
+  h4,
+  .ts--h4 {
+    font-size: var(--h4-m);
+    letter-spacing: var(--h4-spacing-xl);
+    line-height: 1.27;
+  }
+
+  span,
+  a,
+  p,
+  body,
+  q,
+  input,
+  .ts--body {
+    font-size: var(--body1-m);
+    letter-spacing: var(--body1-spacing-xl);
+    line-height: 1.263;
+  }
+
+  label,
+  .ts--body-s {
+    font-size: var(--body2-m);
+    letter-spacing: var(--body2-spacing-m);
+    line-height: 1.33;
+  }
+
+  button,
+  .ts--btn {
+    font-size: var(--button-m);
+    letter-spacing: var(--button-spacing-xl);
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .ts--caption {
+    font-size: var(--caption-m);
+    letter-spacing: var(--caption-spacing-xl);
+  }
+
+  /* Column gap -------------- */
+  /* Row gap */
+  .gap--xl {
+    gap: 4.6rem;
+  }
+
+  .gap--l {
+    gap: 3rem;
+  }
+
+  .gap--m {
+    gap: 1.4rem;
+  }
+
+  .gap--s {
+    gap: 0.6rem;
+  }
+
+  /* Section Spacing --------------- */
+  .container--m {
+    padding: 5.6rem 2.4rem;
+  }
+
+  .container--s {
+    padding: 2.4rem 1.2rem;
+  }
+
+  /* Section Aside Spacing --------- */
+  .aside__box {
+    border: solid 0.1rem var(--color-secondary);
+    border-radius: var(--rad-img);
+  }
+
+  /* Navbar Spacing */
+  nav {
+    padding: 0.4rem 3.2rem;
+  }
 }
 
 /* Laptop */
 @media (min-width: 1280px) {
-}
+  /* specific */
+  .video__list {
+    flex-direction: row;
+  }
+  .article__content {
+    width: 68rem;
+    padding: var(--size-2xl) var(--size-l);
+  }
 
-/* Desktop */
-@media (min-width: 900px) {
+  .article__aside {
+    max-width: 28rem;
+  }
+
+  .video__list {
+    display: flex;
+  }
+
+  .video__item {
+    padding: 0 1.6rem 0 0;
+    border: none;
+    border-right: solid 1px var(--color-secondary-light);
+    width: 25%;
+  }
+
+  .video__item:last-child {
+    border-right: none;
+  }
+
+  #explore {
+    display: flex;
+    background-color: var(--color-mint-light);
+    flex-direction: unset;
+  }
+
+  #inspirations {
+    width: 25%;
+  }
+
+  #latest {
+    width: 50%;
+  }
+
+  .explore__aside {
+    width: 25%;
+  }
+
+  .savedForLater__item {
+    width: 25%;
+    min-height: 55rem;
+  }
+
+  #trending__layout {
+    background-color: var(--color-primary-lightest);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  #trending {
+    grid-column: 1 / 4;
+    grid-row: 1 / -1;
+  }
+
+  .trending__main {
+    width: 63%;
+  }
+
+  #newsletter {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+  }
+
+  #connected {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+  }
+
+  .navbar__wrapper {
+    grid-template-columns: 2fr 9fr 1fr;
+  }
+
+  .trending__main {
+    width: 50%;
+  }
+
+  .trending__list {
+    width: 50%;
+    border-left: solid 1px var(--color-secondary);
+    border-right: solid 1px var(--color-secondary);
+  }
+
+  .trending__txt {
+    width: 50%;
+  }
+
+  .trending__img {
+    width: 50%;
+  }
+
+  .latest__img {
+    width: 48%;
+  }
+
+  .latest__txt {
+    width: 52%;
+  }
+
+  .video__txt-wrapper {
+    width: 50%;
+  }
+
+  .video__thumbnail {
+    width: 50%;
+  }
+
+  .awards__name {
+    letter-spacing: 1.5px;
+  }
+
+  /* basic */
   h1,
   .ts--h1 {
     font-size: var(--h1-xl);
@@ -182,6 +1263,47 @@
   nav {
     padding: 0.4rem 3.2rem;
   }
+}
 
-  /* Sidebar List Width */
+/* Desktop */
+@media (min-width: 1440px) {
+  .article__content {
+    width: 72rem;
+  }
+
+  .article__aside {
+    max-width: 32rem;
+  }
+
+  .trending__main {
+    width: 63%;
+  }
+
+  .trending__list {
+    width: 37%;
+  }
+
+  .trending__txt {
+    width: 60%;
+  }
+
+  .trending__img {
+    width: 40%;
+  }
+
+  .latest__img {
+    width: 33.3333%;
+  }
+
+  .latest__txt {
+    width: 66.6666%;
+  }
+
+  .video__txt-wrapper {
+    width: 60%;
+  }
+
+  .video__thumbnail {
+    width: 40%;
+  }
 }
