--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -293,8 +293,7 @@
 .article__thumbnail {
   object-fit: cover;
   object-position: center;
-  height: 100%;
-  width: 100%;
+  height: 70rem;
   aspect-ratio: 16 / 9;
 }
 
